[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberm4fia-osint"
version = "0.2.0"
description = "Terminal OSINT username intelligence framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "CyberM4fia" }]
keywords = ["osint", "username", "intelligence", "recon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "aiohttp>=3.9.0",
    "rich>=13.0.0",
    "beautifulsoup4>=4.12.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.32", "pydantic>=2"]
socks = ["aiohttp-socks>=0.8.0"]
whois = ["python-whois>=0.9.0"]
photo = ["Pillow>=10.0.0", "imagehash>=4.3.0"]
dns = ["dnspython>=2.4.0"]
report = ["openpyxl>=3.1.0", "reportlab>=4.0.0"]
extract = ["socid-extractor>=0.0.25"]
holehe = ["holehe>=1.61", "httpx>=0.24.0"]
ghunt = ["ghunt>=2.3.0", "httpx>=0.24.0"]
toutatis = ["toutatis>=1.4"]
phone = ["phonenumbers>=8.13"]
tor = ["stem>=1.8.2"]
browser = ["playwright>=1.40.0"]
ai = [
    "llama-cpp-python>=0.3.0",
    "huggingface_hub>=0.24.0",
]
all = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2",
    "aiohttp-socks>=0.8.0",
    "python-whois>=0.9.0",
    "Pillow>=10.0.0",
    "imagehash>=4.3.0",
    "dnspython>=2.4.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "socid-extractor>=0.0.25",
    "holehe>=1.61",
    "httpx>=0.24.0",
    "ghunt>=2.3.0",
    "toutatis>=1.4",
    "phonenumbers>=8.13",
    "stem>=1.8.2",
    "playwright>=1.40.0",
    "llama-cpp-python>=0.3.0",
    "huggingface_hub>=0.24.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "aioresponses>=0.7.6",
    "httpx>=0.24.0",
    "ruff==0.5.7",
    "mypy==1.10.1",
    "bandit>=1.7.0",
]

[project.scripts]
cyberm4fia-osint = "main:main"

[project.urls]
Homepage = "https://github.com/cyberm4fia/cyberm4fia-osint"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["core*", "modules*", "utils*", "core.analysis*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]
